# PoCUltraISOKeyGen

./: .gitignore  KG.mmap  PoCUtraISOKeyGen.sln  README.md  ~$KG.mmap.~$lock
CheckUltraISO/: CMakeLists.txt  FASTRSA64.cpp  FASTRSA64.h  MutexBlock.h  UltraISOValidator.cpp  UltraISOValidator.h  constdef.h  hash.cpp  hash.h  main.cpp
PoCUtraISOKeyGen/: FAST_MD5_512.cpp  Helper.cpp  Helper.h  KGCPU.cpp  KGCPU.h  KGCUDA.cpp  KGCUDA.h  KGkernel.cu  PoCUtraISOKeyGen.vcxproj  Task.cpp  Task.h  TimeProbe.cpp  TimeProbe.h  cpu_core.cpp  kernel.cpp  kernel.cu  randomizer.cpp  randomizer.h
