cmake_minimum_required(VERSION 3.3)
project(CheckUltraISO)
add_definitions(-DWIN32)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -static-libstdc++ -static-libgcc")
include_directories(third_party/freelip-1.1)
link_directories(third_party/openssl)
set(SOURCE_FILES main.cpp UltraISOValidator.cpp hash.cpp third_party/freelip-1.1/lip.cpp FASTRSA64.cpp FASTRSA64.h)
add_executable(CheckUltraISO ${SOURCE_FILES})
target_link_libraries(CheckUltraISO libgmp.a libcrypto.a wsock32 libwinpthread.a)